<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OPEL Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <string name="action_event_filter">Filter</string>
    <string name="action_event_clear">Clear</string>
    <string name="title_activity_splash_viewer">splashViewer</string>

    <!--  CommInitActivity -->
    <string name="scanning">Scanning for devices... Select a device to connect</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Discover Bluetooth devices</string>

    <!-- GStreamer Example -->
    <string name="button_play">Play</string>
    <string name="button_stop">Stop</string>
    <string name="IP"> </string>
    <string name="Port"> </string>
    <string name="Up"> △ </string>
    <string name="Right"> ▷ </string>
    <string name="Left"> ◁ </string>
    <string name="Down"> ▽ </string>
    <string name="Center"> □ </string>
    <string name="LedOn"> On </string>
    <string name="LedOff">Off</string>
    <string name="CamUp"> Up </string>
    <string name="CamDown">Down</string>
    <string name="IP1">1</string>
    <string name="IP2">2</string>
    <string name="IP3">3</string>
    <string name="Connect">Connect</string>
</resources>
