<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
    
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        
           <TextView
        		android:id="@+id/TextIPAddress"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_marginBottom="20dp"
        		android:layout_marginRight="10dp"
        		android:text="IP" />
     
           
     		<EditText
        		android:id="@+id/editTextIPAddress"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:hint="000.000.000.000"
        		android:layout_marginBottom="20dp"
        		android:inputType="text"
        		android:text="@string/IP" />
     		
     		
      </LinearLayout>
     
     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        
           <TextView
        		android:id="@+id/TextPortAddress"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_marginBottom="20dp"
        		android:layout_marginRight="10dp"
        		android:text="Port" />
     
     		<EditText
        		android:id="@+id/editTextPortAddress"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:hint="0000"
        		android:layout_marginBottom="20dp"
        		android:inputType="text"
        		android:text="@string/Port" />
     	
      </LinearLayout>	
      
     
    
     <Button
        		android:id="@+id/buttonConnect"
	        	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="30dip"
		        android:text="@string/Connect" />
     	
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
     
     	<Button
        		android:id="@+id/button1"
	        	android:layout_width="50dp"
		        android:layout_height="40dp"
		        android:layout_marginRight="20dp"
		        android:text="@string/IP1" />
   			
   		<Button
        		android:id="@+id/button2"
	        	android:layout_width="50dp"
		        android:layout_height="40dp"
		        android:layout_marginRight="20dp"
		        android:text="@string/IP2" />
   		
   		<Button
        		android:id="@+id/button3"
	        	android:layout_width="50dp"
		        android:layout_height="40dp"
		        android:text="@string/IP3" />
   		
    </LinearLayout>
    
    
</LinearLayout>